# SoftwareRenderer

./: CMakeLists.txt  README.md
Project/: ALL_BUILD.vcxproj  SoftRenderer.sln
Project/Source/Math/: ALL_BUILD.vcxproj  Math.sln  Math.vcxproj  Math.vcxproj.filters
Project/Source/Math/Math.dir/Debug/Math.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Math.lastbuildstate
Project/Source/Renderer/: ALL_BUILD.vcxproj  MathLibrary.h  Renderer.sln  Renderer.vcxproj  Renderer.vcxproj.filters
Project/Source/Renderer/Renderer.dir/Debug/: Renderer.exe.recipe  Renderer.ilk
Project/Source/Renderer/Renderer.dir/Debug/Renderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Source/Math/: CMakeLists.txt
Source/Renderer/: AppDefinition.h  CMakeLists.txt  SoftRenderer.cpp  SoftRenderer.h
Source/Renderer/Windows/: GDIHelper.cpp  GDIHelper.h  WinApplication.cpp  WinApplication.h  WinMain.cpp
